# agentic-travel-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py  answer_agent.py  critique_agent.py  intent_agent.py  itinerary_agent.py  planner.py  ranking_agent.py  retrieval_agent.py  state.py  workflow.py
app/api/: routes_eval.py  routes_health.py  routes_trip.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  metrics.py
app/ml/: __init__.py  eval_metrics.py  features.py  ranker.py
app/schemas/: __init__.py  domain.py  requests.py  responses.py
app/services/: __init__.py  dataset_service.py  experiment_service.py  helpfulness_service.py  itinerary_service.py  llm.py  prompt_manager.py  ranking_service.py  retrieval_service.py
app/ui/: streamlit_app.py
app/utils/: __init__.py  dates.py  text.py
configs/: app.yaml  logging.yaml  prompts.yaml
data/: attractions.csv  city_guides.json  hotels.csv  restaurants.csv  sample_user_queries.json
notebooks/: exploration.ipynb
tests/: __init__.py  test_eval.py  test_health.py  test_ranking.py  test_trip_api.py  test_workflow.py
